WUI-15 change pager default width definition to prevent default flex settings, remove text-align: center on tooltip

--- a/src/css/wui.css
+++ b/src/css/wui.css
@@ -59,7 +59,7 @@
     max-width: 300px;
     position: absolute;
     z-index: 101;
-    text-align: center;
+    min-width: 120px;
 }
 /*.pager-tooltip:after {
     position: absolute;
